--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ h1 {
     border-radius: 15px;
     background-color: #121212;
     text-align: center;
+    max-width: 80%;
+    max-height: 20vh;
     color: white;
     width: 1020px;
 }
